--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.7.0",
+    "@react-google-maps/api": "^2.19.2",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.34.0",
+    "@turf/turf": "^6.5.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "^13.5.2",
