--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "@ducanh2912/next-pwa": "^9.7.0",
     "@react-google-maps/api": "^2.19.2",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.34.0",
     "@turf/turf": "^6.5.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
-    "eslint-config-next": "^13.5.3",
+    "eslint-config-next": "^13.5.4",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
-    "next": "^13.5.3",
+    "next": "^13.5.4",
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
