--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
     "next": "^13.5.4",
+    "nextjs-toploader": "^1.5.3",
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
