--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@supabase/supabase-js": "^2.34.0",
     "@turf/turf": "^6.5.0",
     "autoprefixer": "10.4.15",
+    "comma-number": "^2.1.0",
     "eslint": "8.49.0",
     "eslint-config-next": "^13.5.4",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
+    "framer-motion": "^10.16.4",
     "next": "^13.5.4",
     "nextjs-toploader": "^1.5.3",
     "postcss": "8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-geolocated": "^4.1.2",
     "react-google-autocomplete": "^2.7.3",
     "react-icons": "^4.11.0",
+    "react-modal-sheet": "^2.2.0",
     "tailwindcss": "3.3.3",
     "uuid": "^9.0.1"
   }
