--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.38.4",
     "@turf/turf": "^6.5.0",
+    "@vis.gl/react-google-maps": "^0.5.0",
     "autoprefixer": "10.4.15",
     "comma-number": "^2.1.0",
     "eslint": "8.49.0",
