--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vis.gl/react-google-maps": "^0.5.0",
     "autoprefixer": "10.4.15",
     "comma-number": "^2.1.0",
+    "date-fns": "^3.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "^14.0.0",
     "flowbite": "^1.8.1",
