Starting on UI Changes and reverting of how the end tracking button pops up

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
-    "name": "GraveFinder",
-    "short_name": "GF",
+    "name": "Memento Mori - Grave Finding App",
+    "short_name": "Memori",
     "description": "Application to locate graves for public cemeteries",
     "icons": [
         {
