--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-geolocated": "^4.1.2",
     "react-icons": "^4.11.0",
     "react-modal-sheet": "^2.2.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "uuid": "^9.0.1"
   }
 }
