--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.38.4",
     "@turf/turf": "^6.5.0",
+    "@vercel/speed-insights": "^1.0.10",
     "@vis.gl/react-google-maps": "^0.5.0",
     "autoprefixer": "10.4.15",
     "comma-number": "^2.1.0",
