--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.5",
+    "@khmyznikov/pwa-install": "^0.3.7",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/storage-js": "^2.5.4",
     "@supabase/supabase-js": "^2.38.4",
